tests/baselines/reference/parserSkippedTokens5.errors.txt
==== tests/cases/compiler/parserSkippedTokens5.ts (2 errors) ====
    \ /*foo*/ ;
    ~
!!! parserSkippedTokens5.ts(1,1): error TS1001: Unexpected character "\".
    ~
!!! parserSkippedTokens5.ts(1,1): error TS1008: Unexpected token; 'module, class, interface, enum, import or statement' expected.